--- a/test/simple.txt.html
+++ b/test/simple.txt.html
@@ -1,34 +1,36 @@
 <style TYPE='text/css'> <!-- --> body { line-height: 1.1; } </style>
 </FONT>
-<FONT face='courier new' color='black'>search source=mytabl1 mycolumn=value</br>
+<FONT face='courier new' color='black'></FONT>
+<FONT face='courier new' color='blue'>search</FONT>
+<FONT face='courier new' color='black'>&nbsp;source=mytabl1&nbsp;mycolumn=value</br>
+&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'></br>
+</FONT>
+<FONT face='courier new' color='black'>|&nbsp;stats&nbsp;avg&nbsp;(&nbsp;&nbsp;mycolumn&nbsp;&nbsp;)&nbsp;&nbsp;by&nbsp;mycolumn</br>
 </FONT>
 <FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;</br>
-</FONT>
-<FONT face='courier new' color='black'>| stats avg( mycolumn ) by mycolumn</br>
-</FONT>
+&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>|&nbsp;search&nbsp;TST123=value</br>
+&nbsp;&nbsp;&nbsp;</FONT>
 <FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp; | search TST123=value</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp; | fields mycolumn, avg( mycolumn )</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp; | eval test=</FONT>
+&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>|&nbsp;fields&nbsp;mycolumn&nbsp;,&nbsp;&nbsp;avg&nbsp;(&nbsp;mycolumn&nbsp;)</br>
+&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>|&nbsp;eval&nbsp;test=</FONT>
 <FONT face='courier new' color='orange'>"abc"</FONT>
 <FONT face='courier new' color='black'>.</FONT>
 <FONT face='courier new' color='orange'>"xyz"</FONT>
 <FONT face='courier new' color='black'>.'ghf'.</FONT>
 <FONT face='courier new' color='orange'>"'hij'"</FONT>
 <FONT face='courier new' color='black'>.'hhh'</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  | search source=mytabl1 mycolumn=value</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
-</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  | table ABC</br>
+&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>|&nbsp;search&nbsp;source=mytabl1&nbsp;mycolumn=value</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>|&nbsp;table&nbsp;ABC</br>
 <P align="right"><FONT>spl2html v0.1<br/>by Markus Sprunck
