--- a/test/toString.txt.html
+++ b/test/toString.txt.html
@@ -1,18 +1,20 @@
 <style TYPE='text/css'> <!-- --> body { line-height: 1.1; } </style>
 </FONT>
-<FONT face='courier new' color='black'>index=_internal</br>
+<FONT face='courier new' color='black'></FONT>
+<FONT face='courier new' color='blue'>index</FONT>
+<FONT face='courier new' color='black'>=_internal</br>
 </FONT>
 <FONT face='courier new' color='black'></br>
 </FONT>
-<FONT face='courier new' color='black'>| head 1</br>
+<FONT face='courier new' color='black'>|&nbsp;head&nbsp;1</br>
 </FONT>
 <FONT face='courier new' color='black'></br>
 </FONT>
-<FONT face='courier new' color='black'>| eval numberString=tostring( 123456.789, </FONT>
+<FONT face='courier new' color='black'>|&nbsp;eval&nbsp;numberString=tostring&nbsp;(&nbsp;&nbsp;123456.789&nbsp;,&nbsp;&nbsp;</FONT>
 <FONT face='courier new' color='orange'>"commas"</FONT>
-<FONT face='courier new' color='black'> )</br>
+<FONT face='courier new' color='black'>&nbsp;&nbsp;)</br>
 </FONT>
 <FONT face='courier new' color='black'></br>
 </FONT>
-<FONT face='courier new' color='black'>| table numberString</br>
+<FONT face='courier new' color='black'>|&nbsp;table&nbsp;numberString</br>
 <P align="right"><FONT>spl2html v0.1<br/>by Markus Sprunck
