--- a/test/simple.txt.html
+++ b/test/simple.txt.html
@@ -2,23 +2,37 @@
 </FONT>
 <FONT face='courier new' color='black'></FONT>
 <FONT face='courier new' color='blue'>search</FONT>
-<FONT face='courier new' color='black'>&nbsp;source=mytabl1&nbsp;mycolumn=value</br>
+<FONT face='courier new' color='black'> source=mytabl1 mycolumn=value</br>
 &nbsp;&nbsp;&nbsp;</FONT>
 <FONT face='courier new' color='black'></br>
 </FONT>
-<FONT face='courier new' color='black'>|&nbsp;stats&nbsp;avg&nbsp;(&nbsp;&nbsp;mycolumn&nbsp;&nbsp;)&nbsp;&nbsp;by&nbsp;mycolumn</br>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>stats</FONT>
+<FONT face='courier new' color='black'> </FONT>
+<FONT face='courier new' color='blue'>avg</FONT>
+<FONT face='courier new' color='black'>( mycolumn ) </FONT>
+<FONT face='courier new' color='blue'>by</FONT>
+<FONT face='courier new' color='black'> mycolumn</br>
 </FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;</br>
+<FONT face='courier new' color='black'></br>
 &nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>|&nbsp;search&nbsp;TST123=value</br>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>search</FONT>
+<FONT face='courier new' color='black'> TST123=value</br>
 &nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;</br>
+<FONT face='courier new' color='black'></br>
 &nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>|&nbsp;fields&nbsp;mycolumn&nbsp;,&nbsp;&nbsp;avg&nbsp;(&nbsp;mycolumn&nbsp;)</br>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>fields</FONT>
+<FONT face='courier new' color='black'> mycolumn, </FONT>
+<FONT face='courier new' color='blue'>avg</FONT>
+<FONT face='courier new' color='black'>( mycolumn )</br>
 &nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;</br>
+<FONT face='courier new' color='black'></br>
 &nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>|&nbsp;eval&nbsp;test=</FONT>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>eval</FONT>
+<FONT face='courier new' color='black'> test=</FONT>
 <FONT face='courier new' color='orange'>"abc"</FONT>
 <FONT face='courier new' color='black'>.</FONT>
 <FONT face='courier new' color='orange'>"xyz"</FONT>
@@ -26,11 +40,15 @@
 <FONT face='courier new' color='orange'>"'hij'"</FONT>
 <FONT face='courier new' color='black'>.'hhh'</br>
 &nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+<FONT face='courier new' color='black'></br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>|&nbsp;search&nbsp;source=mytabl1&nbsp;mycolumn=value</br>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>search</FONT>
+<FONT face='courier new' color='black'> source=mytabl1 mycolumn=value</br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>
+<FONT face='courier new' color='black'></br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>|&nbsp;table&nbsp;ABC</br>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>table</FONT>
+<FONT face='courier new' color='black'> ABC</br>
 <P align="right"><FONT>spl2html v0.1<br/>by Markus Sprunck
