--- a/test/toString.txt.html
+++ b/test/toString.txt.html
@@ -6,15 +6,21 @@
 </FONT>
 <FONT face='courier new' color='black'></br>
 </FONT>
-<FONT face='courier new' color='black'>|&nbsp;head&nbsp;1</br>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>head</FONT>
+<FONT face='courier new' color='black'> 1</br>
 </FONT>
 <FONT face='courier new' color='black'></br>
 </FONT>
-<FONT face='courier new' color='black'>|&nbsp;eval&nbsp;numberString=tostring&nbsp;(&nbsp;&nbsp;123456.789&nbsp;,&nbsp;&nbsp;</FONT>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>eval</FONT>
+<FONT face='courier new' color='black'> numberString=tostring( 123456.789, </FONT>
 <FONT face='courier new' color='orange'>"commas"</FONT>
-<FONT face='courier new' color='black'>&nbsp;&nbsp;)</br>
+<FONT face='courier new' color='black'> )</br>
 </FONT>
 <FONT face='courier new' color='black'></br>
 </FONT>
-<FONT face='courier new' color='black'>|&nbsp;table&nbsp;numberString</br>
+<FONT face='courier new' color='black'>| </FONT>
+<FONT face='courier new' color='blue'>table</FONT>
+<FONT face='courier new' color='black'> numberString</br>
 <P align="right"><FONT>spl2html v0.1<br/>by Markus Sprunck
