--- a/test/simple.txt.html
+++ b/test/simple.txt.html
@@ -1,54 +1,57 @@
-<style TYPE='text/css'> <!-- --> body { line-height: 1.1; } </style>
-</FONT>
-<FONT face='courier new' color='black'></FONT>
-<FONT face='courier new' color='blue'>search</FONT>
-<FONT face='courier new' color='black'> source=mytabl1 mycolumn=value</br>
-&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'></br>
-</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>stats</FONT>
-<FONT face='courier new' color='black'> </FONT>
-<FONT face='courier new' color='blue'>avg</FONT>
-<FONT face='courier new' color='black'>( mycolumn ) </FONT>
-<FONT face='courier new' color='blue'>by</FONT>
-<FONT face='courier new' color='black'> mycolumn</br>
-</FONT>
-<FONT face='courier new' color='black'></br>
-&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>search</FONT>
-<FONT face='courier new' color='black'> TST123=value</br>
-&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'></br>
-&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>fields</FONT>
-<FONT face='courier new' color='black'> mycolumn, </FONT>
-<FONT face='courier new' color='blue'>avg</FONT>
-<FONT face='courier new' color='black'>( mycolumn )</br>
-&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'></br>
-&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>eval</FONT>
-<FONT face='courier new' color='black'> test=</FONT>
-<FONT face='courier new' color='orange'>"abc"</FONT>
-<FONT face='courier new' color='black'>.</FONT>
-<FONT face='courier new' color='orange'>"xyz"</FONT>
-<FONT face='courier new' color='black'>.'ghf'.</FONT>
-<FONT face='courier new' color='orange'>"'hij'"</FONT>
-<FONT face='courier new' color='black'>.'hhh'</br>
-&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'></br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>search</FONT>
-<FONT face='courier new' color='black'> source=mytabl1 mycolumn=value</br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'></br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>table</FONT>
-<FONT face='courier new' color='black'> ABC</br>
-<P align="right"><FONT>spl2html v0.1<br/>by Markus Sprunck
+<style TYPE='text/css'> <!-- body { line-height: 1.1; } body { font-family: 'courier new'; line-height: 90%; } --> </style>
+</font>
+<font color='black'></font>
+<font color='blue'>search </font>
+<font color='black'></font>
+<font color='blue'>source </font>
+<font color='black'> = mytabl1 mycolumn = value</br>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></br>
+</font>
+<font color='black'>| </font>
+<font color='blue'>stats </font>
+<font color='black'></font>
+<font color='blue'>avg </font>
+<font color='black'>( mycolumn ) </font>
+<font color='blue'>by </font>
+<font color='black'>mycolumn</br>
+</font>
+<font color='black'></br>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>| </font>
+<font color='blue'>search </font>
+<font color='black'>TST123 = value</br>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></br>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>| </font>
+<font color='blue'>fields </font>
+<font color='black'>mycolumn, </font>
+<font color='blue'>avg </font>
+<font color='black'>( mycolumn )</br>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></br>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>| </font>
+<font color='blue'>eval </font>
+<font color='black'>test = </font>
+<font color='orange'>"abc"</font>
+<font color='black'>.</font>
+<font color='orange'>"xyz"</font>
+<font color='black'>.'ghf'.</font>
+<font color='orange'>"'hij'"</font>
+<font color='black'>.'hhh'</br>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>| </font>
+<font color='blue'>search </font>
+<font color='black'></font>
+<font color='blue'>source </font>
+<font color='black'> = mytabl1 mycolumn = value</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>| </font>
+<font color='blue'>table </font>
+<font color='black'>ABC</br>
