--- a/test/toString.txt.html
+++ b/test/toString.txt.html
@@ -1,26 +1,27 @@
-<style TYPE='text/css'> <!-- --> body { line-height: 1.1; } </style>
-</FONT>
-<FONT face='courier new' color='black'></FONT>
-<FONT face='courier new' color='blue'>index</FONT>
-<FONT face='courier new' color='black'>=_internal</br>
-</FONT>
-<FONT face='courier new' color='black'></br>
-</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>head</FONT>
-<FONT face='courier new' color='black'> 1</br>
-</FONT>
-<FONT face='courier new' color='black'></br>
-</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>eval</FONT>
-<FONT face='courier new' color='black'> numberString=tostring( 123456.789, </FONT>
-<FONT face='courier new' color='orange'>"commas"</FONT>
-<FONT face='courier new' color='black'> )</br>
-</FONT>
-<FONT face='courier new' color='black'></br>
-</FONT>
-<FONT face='courier new' color='black'>| </FONT>
-<FONT face='courier new' color='blue'>table</FONT>
-<FONT face='courier new' color='black'> numberString</br>
-<P align="right"><FONT>spl2html v0.1<br/>by Markus Sprunck
+<style TYPE='text/css'> <!-- body { line-height: 1.1; } body { font-family: 'courier new'; line-height: 90%; } --> </style>
+</font>
+<font color='black'></font>
+<font color='blue'>index </font>
+<font color='black'> = _internal</br>
+</font>
+<font color='black'></br>
+</font>
+<font color='black'>| </font>
+<font color='blue'>head </font>
+<font color='black'>1</br>
+</font>
+<font color='black'></br>
+</font>
+<font color='black'>| </font>
+<font color='blue'>eval </font>
+<font color='black'>numberString = </font>
+<font color='blue'>tostring </font>
+<font color='black'>( 123456.789, </font>
+<font color='orange'>"commas"</font>
+<font color='black'> )</br>
+</font>
+<font color='black'></br>
+</font>
+<font color='black'>| </font>
+<font color='blue'>table </font>
+<font color='black'>numberString</br>
